# pykissembed-cloud — cloud embedding providers for pykissembed
#
# Public openai, gemini, and qwen entry-point providers retain their OpenRouter
# routing; jina remains native. The same extra also supplies the SDK/HTTP
# clients used by the canonical similarity cache providers.
#
# Install alongside the core package:
#
#     pip install pykissembed-cloud
#     export OPENROUTER_API_KEY=sk-or-...
#     export JINA_API_KEY=jina_...
#     pykissembed providers list
#     pykissembed populate-embeddings --provider qwen-text

[build-system]
requires = ["hatchling>=1.31.0", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pykissembed-cloud"
dynamic = ["version"]
description = "Cloud embedding providers for pykissembed (openai, gemini, qwen via OpenRouter; jina native)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pykissembed", "openrouter", "openai", "gemini", "qwen", "jina", "embeddings"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "google-genai>=1.0",
    "openai>=1.50",
    "requests>=2.32",
]

[project.entry-points."pykissembed.providers"]
openai = "pykissembed_cloud.providers.openai:OpenAIProvider"
gemini = "pykissembed_cloud.providers.gemini:GeminiProvider"
qwen = "pykissembed_cloud.providers.qwen:QwenProvider"
jina = "pykissembed_cloud.providers.jina:JinaProvider"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.build.targets.wheel]
packages = ["pykissembed_cloud"]

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]

[tool.coverage.run]
branch = true
source = ["pykissembed_cloud"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts / documentation style ---
    "line-too-long",    # line-too-long — enforcing line length is the formatter's job, not the linter's
    "missing-copyright-notice",  # missing-copyright-notice — files don't carry per-file copyright headers in this project
    "missing-trailing-comma",  # missing-trailing-comma — owned by the ruff formatter; the lint rule fights it
    "incorrect-blank-line-before-class",    # incorrect-blank-line-before-class — wants a blank line before class docstrings; mutually exclusive with D211 (no blank line), which this project follows
    "multi-line-summary-second-line",    # multi-line-summary-second-line — wants the summary to start on line 2; mutually exclusive with D212 (summary on line 1, the NumPy-docstring style used here)
    "non-imperative-mood",    # non-imperative-mood — first docstring word need not be imperative ("Returns…" is fine in NumPy style)
    "undocumented-public-method", "undocumented-public-function", "undocumented-magic-method", "undocumented-public-init",  # undocumented public method / public function / magic method / __init__ — docstrings optional on test helpers and dunders
    # --- Size / complexity thresholds (complexity is governed by pykissembed's own gate) ---
    "too-many-return-statements", # too-many-return-statements
    "too-many-branches", # too-many-branches
    "too-many-arguments", # too-many-arguments
    "too-many-locals", # too-many-locals
    "too-many-statements", # too-many-statements
    "too-many-boolean-expressions", # too-many-boolean-expressions
    "too-many-positional-arguments", # too-many-positional-arguments
    "complex-structure",    # complex-structure — McCabe complexity; tracked by pykissembed's complexity check instead
    # --- Deliberate idioms in this codebase ---
    "magic-value-comparison", # magic-value-comparison — bare literals in comparisons are fine in tooling/tests (thresholds, counts, exit codes)
    "commented-out-code",  # commented-out-code — commented code kept as inline notes/examples
    "logging-f-string",    # logging-f-string — f-strings in logging calls accepted over lazy %-formatting
    "assert",    # assert — pytest tests rely on bare `assert`
    "subprocess-without-shell-equals-true",    # subprocess-without-shell-equals-true — subprocess calls use fixed argv lists, not untrusted input
    "try-consider-else",  # try-consider-else — returning from the `try` body instead of an `else` block is accepted style
    "verbose-log-message",  # verbose-log-message — passing the caught exception object to logging.exception() is tolerated
    "boolean-type-hint-positional-argument",  # boolean-type-hint-positional-argument — bool positional params are idiomatic in Typer/Click apps
    "boolean-positional-value-in-call",  # boolean-positional-value-in-call — passing literal True/False positionally is accepted
    "import-outside-top-level", # import-outside-top-level — lazy in-function imports are deliberate (openai imported only when a provider is used)
    "typing-only-standard-library-import",   # typing-only-standard-library-import — stdlib typing-only imports may stay at module level instead of a TYPE_CHECKING block
    "blind-except",  # blind-except — catching broad Exception is OK at CLI/provider boundaries
    "implicit-namespace-package",  # implicit-namespace-package — test/fixture dirs intentionally have no __init__.py
    "function-call-in-default-argument",    # function-call-in-default-argument — calls in defaults OK for module-level Path constants
    "missing-return-type-undocumented-public-function",  # missing-return-type-undocumented-public-function — return annotations optional on helpers
    "any-type",  # any-type — typing.Any allowed at dynamic boundaries (kwargs, JSON payloads)
    "f-string-in-exception",   # f-string-in-exception — f-string literals directly in `raise X(f"…")` accepted without a msg variable
    "try-except-continue",    # try-except-continue — continuing past per-item errors is deliberate in scan loops
    "manual-dict-comprehension", # manual-dict-comprehension — explicit dict-building loops kept for readability
    "global-statement", # global-statement — `global` used for module-level lazy caches
    "outdated-version-block",   # outdated-version-block — sys.version_info fallback blocks kept for older-Python compatibility shims
    "private-member-access",  # private-member-access — tests reach into private members by design
    "no-self-use", # no-self-use — Protocol-bound methods don't need self
    "unused-private-typed-dict",  # unused-private-typed-dict — private TypedDicts kept as structural documentation
    "unused-variable",    # unused-variable — unused locals tolerated in early-return / defensive paths
    "unused-method-argument",  # unused-method-argument — unused args kept on monkeypatch fixtures to match required signatures
    "unused-lambda-argument",  # unused-lambda-argument — unused lambda params kept to match callback signatures
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["missing-type-function-argument", "missing-return-type-undocumented-public-function", "missing-return-type-private-function", "assert", "magic-value-comparison", "no-self-use"]

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real network calls (cloud providers). Default to skipping them;
# opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:pykissembed",
    "-m", "not live",
    "-n", "auto",
]
markers = [
    "live: live network tests (skipped by default; enable with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["pykissembed_cloud", "tests"]
pythonVersion = "3.14"
