# pykissembed-local — local sentence-transformers provider for pykissembed
#
# The recommended default for similarity checks: no API key, no network,
# runs in CI. Overrides the core package's stub via the entry-point
# group so that ``pykissembed.providers list`` reports the real model id.
#
# Install alongside the core package:
#
#     pip install pykissembed-local
#     python -m pykissembed.similarity.populate_embeddings --provider local
#     pytest -m similarity

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pykissembed-local"
version = "0.1.19"
description = "Local sentence-transformers embedding provider for pykissembed (BAAI/bge-small-en-v1.5)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pykissembed", "sentence-transformers", "embeddings", "local"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "pandas>=3.0",
]

[project.entry-points."pykissembed.providers"]
local = "pykissembed_local.provider:LocalProvider"

[tool.hatch.build.targets.wheel]
packages = ["pykissembed_local"]

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]

[tool.coverage.run]
branch = true
source = ["pykissembed_local"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "CPY001", # package follows the root project's no per-file-header policy
    "S403", # controlled pickle use is limited to the provider round-trip test
    "S404", # subprocess imports use fixed argv lists without a shell
    "T201",   # print() usage — allowed in scripts
    "PLR09",  # too many of things,
    "C901",  # too complex
    "PLC0415", # import-outside-top-level — lazy in-function imports are deliberate: sentence-transformers/tiktoken are heavy/optional and deferred (mirrors the root pykissembed config)
    "PLR6301", # provider methods implement the shared Provider protocol
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001", "ANN201", "ANN202", "S101", "PLR2004", "PLR6301",
    "E501", "CPY001", "COM812", "D203", "D213", "D401",
    "D102", "D103", "D105", "D107", "C901", "ERA001",
    "G004", "S603", "TRY300", "TRY401", "FBT001", "FBT003",
    "PLC0415", "TC003", "BLE001", "INP001", "B008", "ANN401",
    "EM102", "S112", "PERF403", "PLW0603", "UP036", "SLF001",
    "PYI049", "F841", "ARG002", "ARG005", "N801", "RUF012",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real model downloads (sentence-transformers). Default to skipping;
# opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not live",
    "-n", "auto",
]
markers = [
    "live: live model-load tests (skipped by default; enable with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["pykissembed_local", "tests"]
pythonVersion = "3.14"
