# pykissembed-local — lightweight v0.1 compatibility tombstone.
#
# This distribution intentionally has no runtime dependencies and exposes no
# provider entry point. It remains importable so older environments receive an
# actionable cloud-only migration error instead of loading a local model stack.

[build-system]
requires = ["hatchling>=1.31.0", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pykissembed-local"
dynamic = ["version"]
description = "Compatibility tombstone for the retired pykissembed local embedding provider."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pykissembed", "embeddings", "compatibility", "migration"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.build.targets.wheel]
packages = ["pykissembed_local"]

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]

[tool.coverage.run]
branch = true
source = ["pykissembed_local"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "undocumented-public-module",
    "undocumented-public-package",
    "missing-copyright-notice", # package follows the root project's no per-file-header policy
    "suspicious-subprocess-import", # subprocess imports use fixed argv lists without a shell
    "print",   # print() usage — allowed in scripts
    "PLR09",  # too many of things,
    "complex-structure",  # too complex
    "no-self-use", # provider methods implement the shared Provider protocol
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "missing-type-function-argument", "missing-return-type-undocumented-public-function", "missing-return-type-private-function", "assert", "magic-value-comparison", "no-self-use",
    "line-too-long", "missing-copyright-notice", "missing-trailing-comma", "incorrect-blank-line-before-class", "multi-line-summary-second-line", "non-imperative-mood",
    "undocumented-public-method", "undocumented-public-function", "undocumented-magic-method", "undocumented-public-init", "complex-structure", "commented-out-code",
    "logging-f-string", "subprocess-without-shell-equals-true", "try-consider-else", "verbose-log-message", "boolean-type-hint-positional-argument", "boolean-positional-value-in-call",
    "import-outside-top-level", "typing-only-standard-library-import", "blind-except", "implicit-namespace-package", "function-call-in-default-argument", "any-type",
    "f-string-in-exception", "try-except-continue", "manual-dict-comprehension", "global-statement", "outdated-version-block", "private-member-access",
    "unused-private-typed-dict", "unused-variable", "unused-method-argument", "unused-lambda-argument", "invalid-class-name", "mutable-class-default",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:pykissembed",
    "-n", "auto",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["pykissembed_local", "tests"]
pythonVersion = "3.14"
