# pyqtest-local — local sentence-transformers provider for pyqtest
#
# The recommended default for similarity checks: no API key, no network,
# runs in CI. Overrides the core package's stub via the entry-point
# group so that ``pyqtest providers list`` reports the real model id.
#
# Install alongside the core package:
#
#     pip install pyqtest-local
#     python -m pyqtest.similarity.populate_embeddings --provider local
#     pytest -m similarity

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pyqtest-local"
version = "0.1.0"
description = "Local sentence-transformers embedding provider for pyqtest (BAAI/bge-small-en-v1.5)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["pyqtest", "sentence-transformers", "embeddings", "local"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
]

[project.entry-points."pyqtest.providers"]
local = "pyqtest_local.provider:LocalProvider"

[tool.hatch.build.targets.wheel]
packages = ["pyqtest_local"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # formatter's job
    "CPY001",  # copyright header
    "PLR2004", # magic numbers in tooling
    "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0916", "PLR0917",
    "COM812", "D203", "D213", "ERA001",
    "G004", "S101", "S603", "TRY300", "TRY401",
    "FBT001", "FBT003",
    "PLC0415",
    "TC003",
    "BLE001",
    "D401",
    "D102", "D103", "D105", "D107",
    "INP001",
    "B008",
    "ANN201", "ANN401",
    "EM102", "S112", "PERF403", "PLW0603", "UP036",
    "SLF001",
    "PLR6301", # Protocol-bound methods don't need self
    "C901",
    "PYI049",
    "F841",
    "ARG002", "ARG005",
    "N801",    # class-name caps tolerated (SentenceTransformer is third-party)
    "RUF012",  # mutable class attributes are fine for Provider attributes
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "S101", "PLR2004", "PLR6301"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "live: live model-load tests (skipped by default; enable with -m live)",
]
addopts = ["-ra", "--strict-markers"]

[tool.pyright]
include = ["pyqtest_local", "tests"]
pythonVersion = "3.12"
